--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "vercel-build": "vite build && mkdir -p ../dist && cp -r dist/* ../dist/"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
