--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,7 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     },
     {
       "src": "backend/index.js",
@@ -15,7 +13,11 @@
   ],
   "routes": [
     {
-      "src": "/api/v1/user/(signup|signin|bulk)",
+      "src": "/api/v1/user/signup/bulk",
+      "dest": "backend/index.js"
+    },
+    {
+      "src": "/api/v1/user/(signup|signin)",
       "dest": "backend/index.js"
     },
     {
