--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
       "methods": ["PUT"]
     },
     {
-      "src": "/api/v1/account/(balance|transfer)",
+      "src": "/api/v1/account/(balance|transfer|transactions)",
       "dest": "backend/index.js"
     },
     {
